Mon Dec 23 12:42:13 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* array.c: Have to_h raise on elements that are not key-value pairs
	  [#9239]

	* enum.c: ditto

Mon Dec 23 05:01:55 2013  Zachary Scott  <e@zzak.io>

	* doc/syntax/methods.rdoc: [DOC] Added example for underscore
	  conventions in method names. Also added doc to clarify encoding
	  character set support for Ruby programs and elaborated on defining
	  predicate and bang methods. Based on a patch by @gaurish
	  [Fixes GH-477] https://github.com/ruby/ruby/pull/477

Mon Dec 23 03:18:09 2013  Zachary Scott  <e@zzak.io>

	* doc/ChangeLog-1.9.3: [DOC] Fix typos by @dvsuresh
	  [Fixes GH-485] https://github.com/ruby/ruby/pull/485
	* ext/openssl/ossl_config.c: ditto
	* lib/rss/utils.rb, lib/time.rb: ditto
	* test/ruby/envutil.rb: ditto

Sun Dec 22 23:56:56 2013  Zachary Scott  <e@zzak.io>

	* lib/{rake,rdoc,rss}/*, test/rexml/test_listener.rb: [DOC] Fix typos
	  by @dvsuresh [Fixes GH-486] https://github.com/ruby/ruby/pull/486

Sun Dec 22 11:08:47 2013  Eric Hodel  <drbrain@segment7.net>

	* test/rubygems/test_gem_ext_builder.rb:  Fix warning due to ambiguous
	  expression.

Sun Dec 22 11:05:53 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/install_command.rb:  Restore gem install
	  --ignore-dependencies for remote gems
	* test/rubygems/test_gem_commands_install_command.rb:  Test for the
	  above.

Sun Dec 22 10:23:40 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc.rb:  Set RDoc to release version.

Sun Dec 22 10:19:07 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Set RubyGems to release version.

Sun Dec 22 10:16:08 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb (module Gem):  Fix comment for
	  Gem::load_path_insert_index.

Sun Dec 22 04:07:55 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (ruby_gc_set_params): don't show obsolete warnings for
	  RUBY_FREE_MIN/RUBY_HEAP_MIN_SLOTS if